--- a/app/assets/components/subpages/oj-settings-page.html
+++ b/app/assets/components/subpages/oj-settings-page.html
@@ -31,7 +31,7 @@
 
         </section>
 
-        <json-request id="update" method="put" url="/api/user" on-success="updateSuccess" on-error="updateError"></json-request>
+        <api-request id="update" method="put" api="user" on-success="updateSuccess" on-error="updateError"></api-request>
 
     </template>
   <script>
