--- a/app/assets/components/subpages/oj-submit-page.html
+++ b/app/assets/components/subpages/oj-submit-page.html
@@ -57,7 +57,13 @@
 
         </paper-material>
 
-        <paper-url-resolver text="{{paperIdentifier}}" paper-id="{{paperId}}" paper-full-id="{{paperFullId}}" paper-typed-id="{{paperTypedId}}" paper-version="{{paperVersion}}" paper-url="{{paperURL}}" resolved="{{paperValid}}">
+        <paper-url-resolver text="{{paperIdentifier}}"
+                            paper-id="{{paperId}}"
+                            paper-full-id="{{paperFullId}}"
+                            paper-typed-id="{{paperTypedId}}"
+                            paper-version="{{paperVersion}}"
+                            paper-url="{{paperURL}}"
+                            resolved="{{paperValid}}">
         </paper-url-resolver>
 
     </section>
