--- a/app/assets/components/elements/oj-current-user.html
+++ b/app/assets/components/elements/oj-current-user.html
@@ -1,7 +1,7 @@
 <dom-module id="oj-current-user">
   <template>
 
-    <json-request method="get" auto="true" url="/api/user" on-success="isReady"></json-request>
+    <api-request method="get" auto="true" api="user" on-success="isReady"></api-request>
 
   </template>
   <script>
