--- a/app/assets/components/mixins/oj-api-helpers.html
+++ b/app/assets/components/mixins/oj-api-helpers.html
@@ -16,7 +16,7 @@
         },
 
         getAllIssuesApi: function(paper) {
-            return "papers/" + (paper.typed_provider_id || paper) + "/annotations/all";
+            return "papers/" + (paper.typed_provider_id || paper) + "/annotations";
         },
 
         previewApi: function(paper) {
