--- a/app/assets/components/mixins/oj-utils.html
+++ b/app/assets/components/mixins/oj-utils.html
@@ -1,5 +1,7 @@
 <script>
 
+    //#@todo: Refactor this with Oj.GlobalExpressions
+
     window.Oj.utils = {
 
         EMAIL_REGEX: /^([^@\s]+)@((?:[-a-z0-9]+\.)+[a-z]{2,})$/i,
@@ -9,6 +11,23 @@
                 if (callback.call(thisObj, array[i], i, array) )
                     return i;
             return -1;
+        },
+
+        normalizeDate: function(date) {
+            if (!date)
+                return undefined;
+            else if (typeof date == 'string')
+                return new Date(date);
+            else
+                return date;
+        },
+
+        trim: function(string) {
+            return $.trim(string);
+        },
+
+        getFirstLine: function(string) {
+            return $.trim(string || '').split('\n')[0];
         },
 
         detect: function(array, callback, thisObj) {
