--- a/app/assets/components/ui-elements/oj-annotation.html
+++ b/app/assets/components/ui-elements/oj-annotation.html
@@ -1,116 +1,18 @@
 <dom-module id="oj-annotation">
 
-  <style>
-      :host{
-          width: 100%;
-          position:absolute;
-      }
-      .container {
-          box-sizing: border-box;
-      }
-      .container-inner {
-          padding: 10px 10px 10px;
-          box-sizing: border-box;
-          background-color: #efefef;
-          color: #7d7d7d;
-          font-weight: 400;
-          min-height: 40px;
-      }
-      .container-inner.expanded {
-          padding-bottom: 6px;
-      }
-      iron-collapse {
-          position: absolute;
-          top: 0;
-          left: 0;
-          right: 0;
-          z-index: 1;
-      }
-      .header {
-      }
-      .issue {
-        cursor: pointer;
-        font-size: 0.9em;
-        padding: 10px 5px 5px 5px;
-        min-height: 25px;
-      }
-
-      .collapsed .header {
-          overflow: hidden;
-      }
-
-      .collapsed .issue {
-          height: 25px;
-      }
-      .collapsed .issue::shadow #renderedContent {
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-      }
-
-      .count {
-          font-size: 0.7em;
-          margin-left: 12px;
-      }
-
-      :host .container /deep/ paper-button {
-          padding-top:    0;
-          padding-bottom: 0;
-          margin:         4px 0 0 4px;
-          color:          rgb(120, 120, 120);
-          border:         1px solid rgb(120, 120, 120);
-          box-shadow:     0 4px 0 0 rgba(218, 218, 218, 0.3);
-          height:         28px;
-          line-height:    11px;
-      }
-      :host .container /deep/ paper-button iron-icon {
-          width:         16px;
-          height:        16px;
-          padding:       0;
-          margin:        -8px 4px 8px;
-      }
-      :host .container /deep/ paper-button:not([disabled]):hover, paper-button:not([disabled]):active {
-          color:        rgb( 90,  90,  90);
-          border-color: rgb( 90,  90,  90);
-      }
-      :host .container /deep/ paper-button[disabled] {
-          border-color:  rgb(200,200,200);
-          color:         rgb(200,200,200);
-      }
-
-      oj-reviewer-annotation-controls {
-          position: absolute;
-          top:      0;
-          right:    6px;
-      }
-
-      markdown-text-area {
-          width: 100%;
-      }
-      markdown-text-area::shadow a.toggle {
-          bottom: -45px;
-          right:  154px;
-          font-size: 12px;
-          color:  #888;
-          text-transform: capitalize;
-      }
-      markdown-text-area::shadow markdown-content::shadow #renderedContent {
-          padding: 4px;
-      }
-
-    </style>
-
   <template>
 
-    <div class$="{{_computeClass(annotation)}}">
+    <!-- Collapsed Display -->
+
+    <div class$="{{containerClass('collapsed', annotation, annotation.state)}}">
+        <oj-reviewer-annotation-controls paper="{{paper}}" annotation="{{annotation}}"></oj-reviewer-annotation-controls>
+
         <div class="container-inner">
 
-          <oj-reviewer-annotation-controls paper="{{paper}}" annotation="{{annotation}}"></oj-reviewer-annotation-controls>
-
-          <div on-tap="expand" class="header layout horizontal">
-              <oj-user-label assignment="{{getAssignment(paper, annotation.assignment)}}"></oj-user-label>
-              <markdown-simplified class="issue layout flex" markdown="{{annotation.body}}"></markdown-simplified>
-              <div class="count"><span>{{responseCount(annotation)}}</span> replies</div>
+          <div on-tap="expand" class="header">
+              <div class="text">{{headerDisplay(annotation.body, annotation.assignment, paper)}}</div>
+              <div class="date">{{latestDateDisplay(annotation, annotation.responses)}}</div>
+              <div class="count">{{replyCountDisplay(annotation.responses)}}</div>
           </div>
 
         </div>
@@ -118,35 +20,37 @@
 
     <!-- Overlay this to get animated expansion to work nicely -->
 
-    <iron-collapse id="collapsible" opened="{{annotation.open}}" on-resize="annotationAfterOpen">
+    <iron-collapse id="collapsible" opened="{{annotation.open}}" on-iron-resize="annotationAfterOpen">
       <iron-a11y-keys keys="esc" on-keys-pressed="collapse"></iron-a11y-keys>
 
-      <div class$="{{_computeClass2(annotation)}}">
+        <!-- Expanded Display -->
+
+      <div class$="{{containerClass('expanded', annotation, annotation.state)}}">
           <div class="container-inner">
 
-              <oj-reviewer-annotation-controls paper="{{paper}}" annotation="{{annotation}}"></oj-reviewer-annotation-controls>
-
               <template is="dom-if" if="{{!annotation.new}}">
-                  <div on-tap="collapse" class="header layout horizontal">
-                      <oj-user-label assignment="{{getAssignment(paper, annotation.assignment)}}"></oj-user-label>
-                      <markdown-content class="issue" markdown="{{annotation.body}}"></markdown-content>
+                  <oj-reviewer-annotation-controls paper="{{paper}}" annotation="{{annotation}}"></oj-reviewer-annotation-controls>
+
+                  <div on-tap="collapse" class="header">
+                      <div class="text">{{author}}</div>
+                      <div class="date">{{dateDisplay(annotation)}}</div>
                   </div>
 
+                  <markdown-content class="issue" markdown="{{annotation.body}}"></markdown-content>
+
                   <oj-annotation-comments id="comments" paper="{{paper}}" annotation="{{annotation}}"
-                                              on-new-comment-shown="newCommentShown"></oj-annotation-comments>
+                                              on-new-response-shown="newResponseShown"></oj-annotation-comments>
               </template>
 
               <template is="dom-if" if="{{annotation.new}}">
 
-                  <div class="header">
-                      <iron-a11y-keys keys="esc" on-keys-pressed="close"></iron-a11y-keys>
-                      <iron-a11y-keys keys="shift+enter" on-keys-pressed="submitAnnotation"></iron-a11y-keys>
-                      <markdown-text-area id="annotationTextArea" class="issue" value="{{text}}"></markdown-text-area>
-                  </div>
+                  <iron-a11y-keys keys="esc" on-keys-pressed="close"></iron-a11y-keys>
+                  <iron-a11y-keys keys="shift+enter" on-keys-pressed="submitAnnotation"></iron-a11y-keys>
+                  <markdown-text-area id="annotationTextArea" class="issue" value="{{text}}"></markdown-text-area>
 
                   <div class="layout horizontal">
                       <span class="layout flex"></span>
-                      <paper-button on-click="submitAnnotation" disabled$="{{_computeDisabled(text, saving)}}">Add</paper-button>
+                      <paper-button on-click="submitAnnotation" disabled$="{{disableSaving(text, saving)}}">Add</paper-button>
                       <paper-button on-click="close" disabled$="{{saving}}">Cancel</paper-button>
                   </div>
 
@@ -157,12 +61,141 @@
 
     </iron-collapse>
 
-      <api-request id="saveAnnotationRequest"
-                   method="post"
-                   loading="{{saving}}"
-                   api="{{paperAnnotationsApi(paper)}}"
-                   on-success="annotationSaved"
-                   on-error="annotationError"></api-request>
+    <api-request id="saveAnnotationRequest"
+                 method="post"
+                 loading="{{saving}}"
+                 api="{{paperAnnotationsApi(paper)}}"
+                 on-success="annotationSaved"
+                 on-error="annotationError"></api-request>
+
+      <style>
+          :host{
+          }
+
+          .container {
+              box-sizing: border-box;
+              padding:    0 18px;
+              @apply      --disable-selection;
+          }
+          .container-inner {
+              box-sizing:       border-box;
+              background-color: #efefef;
+              color:            #7d7d7d;
+              font-weight:      400;
+              padding:          2px;
+          }
+          .expanded .container-inner {
+              background-color: #f7f7f7;
+          }
+
+          iron-collapse {
+              position: absolute;
+              top:      0;
+              left:     0;
+              right:    0;
+              z-index:  1;
+          }
+
+          .header {
+              @apply(--layout-horizontal);
+              @apply(--layout-end);
+          }
+
+          .header .text {
+              font-family: Neuton;
+              color:         #192023;
+              font-size:     20px;/* Approximation due to font substitution */
+              font-weight:   700;
+              line-height:   30px;
+              @apply(--ellipses);
+          }
+          .header .date {
+              font-family: Roboto;
+              color:         #b3b3b3;
+              font-size:     14px;/* Approximation due to font substitution */
+              font-style:    italic;
+              margin-bottom: 4px;
+              margin-left:   6px;
+              white-space:   nowrap;
+          }
+          .header .count {
+              font-size:     0.7em;
+              flex-grow:     2;
+              text-align:    right;
+              margin-left:   6px;
+              margin-right:  30px; /* Leave space for the controls */
+              margin-bottom: 4px;
+              white-space:   nowrap;
+          }
+
+          .issue {
+              font-family: Roboto;
+              color:       black;
+              font-size:   14px;/* Approximation due to font substitution */
+              font-weight: 400;
+
+              cursor:     pointer;
+              padding:     0 4px 4px 4px;
+              min-height:  25px;
+          }
+
+          .collapsed .header {
+              overflow: hidden;
+          }
+
+          .collapsed .issue {
+              height: 25px;
+          }
+          .collapsed .issue::shadow #renderedContent {
+              @apply --ellipses;
+          }
+
+          :host .container /deep/ paper-button {
+              padding-top:    0;
+              padding-bottom: 0;
+              margin:         4px 0 0 4px;
+              color:          rgb(120, 120, 120);
+              border:         1px solid rgb(120, 120, 120);
+              box-shadow:     0 4px 0 0 rgba(218, 218, 218, 0.3);
+              height:         28px;
+              line-height:    11px;
+          }
+          :host .container /deep/ paper-button iron-icon {
+              width:         16px;
+              height:        16px;
+              padding:       0;
+              margin:        -8px 4px 8px;
+          }
+          :host .container /deep/ paper-button:not([disabled]):hover, paper-button:not([disabled]):active {
+              color:        rgb( 90,  90,  90);
+              border-color: rgb( 90,  90,  90);
+          }
+          :host .container /deep/ paper-button[disabled] {
+              border-color:  rgb(200,200,200);
+              color:         rgb(200,200,200);
+          }
+
+          oj-reviewer-annotation-controls {
+              position: absolute;
+              top:      7px;
+              right:    20px;
+          }
+
+          markdown-text-area {
+              width: 100%;
+          }
+          markdown-text-area::shadow a.toggle {
+              bottom:         -45px;
+              right:          154px;
+              font-size:      12px;
+              color:          #888;
+              text-transform: capitalize;
+          }
+          markdown-text-area::shadow markdown-content::shadow #renderedContent {
+              padding: 4px;
+          }
+
+      </style>
 
   </template>
 
@@ -173,10 +206,16 @@
 
       properties: {
         annotation: {
-          notify:     true,
+          notify:     true
         },
         paper: {
             notify: true
+        },
+        author: {
+            computed: 'authorFor(paper, annotation.assignment)'
+        },
+        firstLine: {
+            computed: 'getFirstLine(annotation.body)'
         },
         text: {
             notify: true
@@ -187,65 +226,93 @@
       },
 
       observers: [
-        'annotationChanged(paper, annotation)',
         'annotationOpenChanged(annotation.open)'
       ],
 
       ready: function() {
         if (this.annotation && this.annotation.new) {
-            this.async(function () {
-                var edit = this.$$('#annotationTextArea');
-                edit.focus();
-                edit.select();
-            });
+          var component = this;
+          this.async(function () {
+              var edit = component.$$('#annotationTextArea');
+              edit.focus();
+              edit.select();
+          }, 50);
         }
       },
 
       /**** API *****/
 
       close: function() {
-        this.collapse();
+          this.collapse();
+      },
+
+      showNewResponse: function() {
+          this.$.comments.showNewComment();
       },
 
       scrollAnnotationIntoView: function(prioritize_top) {
         if (!this.annotation.open)
           return;
+
+        console.log('scrollIntoView', prioritize_top);
+
         var list = this.offsetParent;
         if (list.tagName != 'OJ-ANNOTATION-LIST')
           console.error('annotation parent is not the oj-annotation-list');
         var container = list.offsetParent;
         if (container.id != 'scroller')
           console.error('annotation-list parent is not the #scroller');
-        var spacing = 10;
-        /*px*/
+
+        var spacing = 10; /*px*/
         var top = this.offsetTop;
         var height = this.$.collapsible.offsetHeight;
         top = top + list.offsetTop;
+
+        console.log('tops', this.offsetTop, list.offsetTop, top, container.scrollTop, container.offsetTop);
+        console.log('heights', height, container.offsetHeight);
+
         var newTop;
         if (prioritize_top && top < container.scrollTop) {
           newTop = top - spacing;
+
         } else if (top + height > container.scrollTop + container.offsetHeight) {
           newTop = top + height + spacing - container.offsetHeight;
           if (prioritize_top && top < newTop)
             newTop = top;
+
         } else if (!prioritize_top && top < container.scrollTop) {
           newTop = top - spacing;
+
         }
+
         if (newTop !== undefined)
           $(container).animate({ scrollTop: newTop }, 500);
       },
 
       /***********************/
 
-      showNewComment: function() {
-        this.$.comments.showNewComment();
+      headerDisplay: function(assignment) {
+          return this.author || this.firstLine;
       },
 
-      annotationChanged: function() {
+      latestDateDisplay: function() {
         if (!this.annotation)
-          return;
-        var assignment = Oj.paperHelpers.assignmentFromSha(this.paper, this.annotation.assignment);
-        this.role = assignment && assignment.role;
+            return null;
+        var date = this.latestDateForAnnotation(this.annotation);
+        return this.shortDateString(date);
+      },
+
+      dateDisplay: function() {
+          if (!this.annotation)
+              return null;
+          var date = this.annotation.created_at;
+          return this.shortDateString(date);
+      },
+
+      replyCountDisplay: function() {
+        var r = this.annotation.responses;
+        var c = r ? r.length : 0;
+        return c.toString() + (c==1 ? ' reply' : ' replies');
       },
 
       annotationOpenChanged: function() {
@@ -259,7 +326,7 @@
         this.scrollAnnotationIntoView(true);
       },
 
-      newCommentShown: function(event) {
+      newResponseShown: function(event) {
         this.scrollAnnotationIntoView(false);
       },
 
@@ -309,24 +376,19 @@
         return Oj.paperHelpers.assignmentFromSha(paper, assignment);
       },
 
-      _computeClass: function(annotation) {
-        return 'container state-' + annotation.state + ' collapsed';
+      containerClass: function(mode, annotation, state) {
+        return 'container state-' + annotation.state + ' ' + mode;
       },
 
-      _computeClass2: function(annotation) {
-        return 'container state-' + annotation.state + ' expanded';
-      },
-
-      _computeDisabled: function(text, saving) {
+        disableSaving: function(text, saving) {
         return !text || saving;
       },
 
-      responseCount: function(annotation) {
-        return annotation.responses && annotation.responses.length || 0;
-      },
-
       behaviors: [
-        Oj.api
+        Oj.api,
+        Oj.paperHelpers,
+        Oj.utils,
+        Oj.globalExpressions
       ]
 
     });
