--- a/app/assets/components/ui-elements/oj-reviewer-annotation-controls.html
+++ b/app/assets/components/ui-elements/oj-reviewer-annotation-controls.html
@@ -1,52 +1,49 @@
 <dom-module id="oj-reviewer-annotation-controls">
-  <style>
 
-        :host{
-        }
-        paper-icon-button {
-          padding: 2px;
-        }
-        paper-icon-button::shadow #icon {
-          width: 16px;
-          height: 16px;
-          fill: white;
-          stroke: black;
-          stroke-width: 1px;
-        }
-        paper-icon-button[disabled]::shadow #icon {
-            fill:   #f6f6f6;
-            stroke: #808080;
-        }
-
-      </style>
   <template>
 
-      <div class="tools" on-tap="changeState">
-          <paper-icon-button id="unresolve"
-                             icon="icons:thumb-down"
-                             name="Unresolve"
-                             title="Unresolve"
-                             disabled$="{{isUnresolved(annotation)}}"></paper-icon-button>
+      <div class="tools">
           <paper-icon-button id="resolve"
-                             icon="icons:thumb-up"
+                             icon="icons:check-circle"
                              name="Resolve"
-                             title="Resolved / Complete"
-                             disabled$="{{isResolved(annotation)}}"></paper-icon-button>
-          <paper-icon-button id="dispute"
-                             icon="icons:report-problem"
-                             name="Dispute"
-                             title="In Dispute"
-                             disabled$="{{isDisputed(annotation)}}"></paper-icon-button>
+                             title="Resolved"
+                             disabled$="{{isResolved(annotation, annotation.state)}}"
+                             on-click="resolveState"></paper-icon-button>
       </div>
 
-      <paper-dialog id="dialog" backdrop="" layered="false">
-          <p>Do you really want to <span>{{newState}}</span> this annotation?</p>
-          <paper-button affirmative="" autofocus="" on-tap="dialogAccepted">{{newAction}}</paper-button>
-          <paper-button dismissive="">Cancel</paper-button>
-      </paper-dialog>
-
-
       <api-request id="putStateChange" method="put" on-success="putStateChangeSuccess"></api-request>
+
+      <style>
+
+          :host{
+          }
+
+          paper-icon-button {
+              padding: 2px;
+          }
+
+          paper-icon-button {
+              width:        24px;
+              height:       24px;
+
+              stroke-width: 1px;
+              --iron-icon-fill-color:   white;
+              --iron-icon-stroke-color: currentcolor;
+
+              --paper-icon-button: {
+                  color:        black;
+              };
+              --paper-icon-button-hover: {
+                  color:        #54d1b8;
+                  stroke-width: 2px;
+              };
+          }
+          paper-icon-button[disabled] {
+              --iron-icon-fill-color:   transparent;
+              --iron-icon-stroke-color: #808080;
+          }
+
+      </style>
 
   </template>
 
@@ -75,36 +72,26 @@
         enabled ? Polymer.dom(this).removeAttribute('hidden') : Polymer.dom(this).setAttribute('hidden', '');
       },
 
-      changeState: function (event) {
+      resolveState: function(event) {
         event.preventDefault();
-        var target = event.target;
-        this.newState = target.id;
-        this.newAction = target.getAttribute('name');
-        if (!this.newAction)
-          return;
-        this.$.dialog.open();
+        this.changeState('resolve');
       },
 
-      dialogAccepted: function () {
-        this.set('$.putStateChange.api', Oj.api.paperAnnotationStateChangeApi(this.paper, this.annotation, this.newState));
+      changeState: function (newState) {
+        var api = Oj.api.paperAnnotationStateChangeApi(this.paper, this.annotation, newState);
+        this.$.putStateChange.api = api;
         this.$.putStateChange.go();
       },
 
       putStateChangeSuccess: function (event, response) {
         $.extend(this.annotation, response);
+        this.notifyPath('annotation.state');
+        this.$.resolve.updateStyles();
         this.fire('annotation-changed', response);
-      },
-
-      isUnresolved: function (annotation) {
-          return annotation.state == 'unresolved';
       },
 
       isResolved: function (annotation) {
         return annotation.state == 'resolved';
-      },
-
-      isDisputed: function (annotation) {
-        return annotation.state == 'disputed';
       },
 
       behaviors: [
